# kalman_lie

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
examples/Lie/: LieMeasurementModel.hpp  LiePositionMeasurementModel.hpp  LieTypes.hpp  LieVelocityMeasurementModel.hpp  SystemModel.hpp  display.py  main.cpp
examples/joints/: CMakeLists.txt  main.cpp
examples/joints_ros/: CMakeLists.txt  main.cpp  package.xml
examples/lie_ros/: CMakeLists.txt  main.cpp  package.xml
include/kalman_joints/: JointPositionMeasurementModel.hpp  JointTypes.hpp  SystemModel.hpp
include/kalman_lie/: LiePositionMeasurementModel.hpp  LieTypes.hpp  LieVelocityMeasurementModel.hpp  NumericalDiff.hpp  SystemModel.hpp
